# pylit

./: README.md  pyproject.toml  run_demo.py
src/py_lit/: __init__.py  demo.py  py_lit.py
src/pylit/: __init__.py  demo.py  pylit.py
src/streamdantic/: __init__.py  demo.py
