[project]
name = "py_lit"
version = "0.1.0"
description = "A Python package that automatically generates Streamlit inputs from your Pydantic models"
authors = [{ name = "Brendan Fahy", email = "bmfahy@gmail.com" }]
maintainers = [{ name = "Brendan Fahy", email = "bmfahy@gmail.com" }]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.6.1",
    "streamlit>=1.31.1",
]
keywords = ["streamlit", "pydantic"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_lit"]

[tool.hatch.metadata]
allow-direct-references = true 


[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "B", # flake8-bugbear
    "N", # pep8-naming
    "I", # isort
    "UP", # pyupgrade
]